file(GLOB_RECURSE srcs ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

# shared library 
ADD_LIBRARY(engine SHARED ${srcs}) 
# static library 
ADD_LIBRARY(engine_static STATIC ${srcs}) 
SET_TARGET_PROPERTIES(engine_static PROPERTIES OUTPUT_NAME "engine")
SET_TARGET_PROPERTIES(engine PROPERTIES CLEAN_DIRECT_OUTPUT 1) 
SET_TARGET_PROPERTIES(engine_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

