function(b_1_b name)
    add_executable(${name} ${name}.cpp)
    if (USE_DYNAMIC_LIBRARY)
        TARGET_LINK_LIBRARIES(${name} ${PROJECT_NAME})
    else (USE_DYNAMIC_LIBRARY)
        TARGET_LINK_LIBRARIES(${name} ${PROJECT_NAME}_static)
    endif (USE_DYNAMIC_LIBRARY)
     TARGET_LINK_LIBRARIES(${name} ${TENSOR_COMPUTING_LIBRARIES} ${MODEL_TOOLS_LIBRARIES} ${IMAGE_LIBRARIES})
endfunction()

if (USE_CROSS_COMPILE)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static")
endif(USE_CROSS_COMPILE)

b_1_b(lenet)
b_1_b(lstm_example)
b_1_b(bert)
b_1_b(tinybert)
b_1_b(classification)
