file(GLOB srcs ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

# shared library 
ADD_LIBRARY(${PROJECT_NAME} SHARED ${srcs} ${CAFFE_PROTO_HDRS} ${CAFFE_PROTO_SRCS} ${ONNX_PROTO_HDRS} ${ONNX_PROTO_SRCS})

# static library 
ADD_LIBRARY(${PROJECT_NAME}_static STATIC ${srcs} ${CAFFE_PROTO_HDRS} ${CAFFE_PROTO_SRCS} ${ONNX_PROTO_HDRS} ${ONNX_PROTO_SRCS})

SET_TARGET_PROPERTIES(${PROJECT_NAME}_static PROPERTIES OUTPUT_NAME "${PROJECT_NAME}") 
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES CLEAN_DIRECT_OUTPUT 1) 
SET_TARGET_PROPERTIES(${PROJECT_NAME}_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
