file(GLOB srcs ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

if(USE_CAFFE)
    set(srcs "${srcs};${CAFFE_PROTO_HDRS};${CAFFE_PROTO_SRCS}")
endif(USE_CAFFE)

if(USE_CAFFE)
    set(srcs "${srcs};${ONNX_PROTO_HDRS};${ONNX_PROTO_SRCS}")
endif(USE_CAFFE)

# shared library 
ADD_LIBRARY(${PROJECT_NAME} SHARED ${srcs})

# static library 
ADD_LIBRARY(${PROJECT_NAME}_static STATIC ${srcs})

SET_TARGET_PROPERTIES(${PROJECT_NAME}_static PROPERTIES OUTPUT_NAME "${PROJECT_NAME}") 
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES CLEAN_DIRECT_OUTPUT 1) 
SET_TARGET_PROPERTIES(${PROJECT_NAME}_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
